// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginModal snapshot tests should match the snapshot at OTP input stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          OTPEnter
        </p>
        <div
          className="login-modal-input-otp-container"
        >
          <input
            data-testid="OTPInput0"
            maxLength={1}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]"
            type="number"
          />
          <input
            data-testid="OTPInput1"
            maxLength={1}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]"
            type="number"
          />
          <input
            data-testid="OTPInput2"
            maxLength={1}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]"
            type="number"
          />
          <input
            data-testid="OTPInput3"
            maxLength={1}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]"
            type="number"
          />
          <input
            data-testid="OTPInput4"
            maxLength={1}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]"
            type="number"
          />
          <input
            data-testid="OTPInput5"
            maxLength={1}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]"
            type="number"
          />
        </div>
        <p
          className="login-modal-input-help login-modal-opaque-text"
        >
          OTPExplanation
        </p>
        <p
          className="login-modal-input-help login-modal-correct-input"
        >
          OTPSendAgain
        </p>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at OTP loading stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          OTPVerifying
        </p>
      </div>
      <div
        className="login-modal-button-container"
      />
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail exists stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          onlyEmail
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="emailInput"
            onChange={[Function]}
            type="email"
            value=""
          />
        </div>
        <p
          className="login-modal-input-help login-modal-wrong-input"
        >
          mailAlreadyExists
        </p>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-green-on-black"
          onClick={[Function]}
          type="button"
          value="accountLogin"
        />
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail input stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          onlyEmail
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="emailInput"
            onChange={[Function]}
            type="email"
            value=""
          />
        </div>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail not valid stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          onlyEmail
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="emailInput"
            onChange={[Function]}
            type="email"
            value=""
          />
        </div>
        <p
          className="login-modal-input-help login-modal-wrong-input"
        >
          mailNotValid
        </p>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          enterPassword
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="userPassword"
            onChange={[Function]}
            type="password"
          />
        </div>
        <p
          className="login-modal-input-help"
        >
          repeatPassword
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="userPasswordRepeat"
            onChange={[Function]}
            type="password"
          />
        </div>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 2`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          logIn
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          onlyEmail
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="emailInput"
            onChange={[Function]}
            type="email"
            value=""
          />
        </div>
        <p
          className="login-modal-input-help"
        >
          enterPassword
        </p>
        <div
          className="login-modal-input-box-container"
        >
          <input
            className="login-modal-input-text"
            data-testid="userPasswordLogin"
            onChange={[Function]}
            type="password"
          />
        </div>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password not match stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          signUp
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <p
          className="login-modal-input-help"
        >
          enterPassword
        </p>
        <div
          className="login-modal-input-box-container login-modal-input-wrong"
        >
          <input
            className="login-modal-input-text"
            data-testid="userPassword"
            onChange={[Function]}
            type="password"
          />
        </div>
        <p
          className="login-modal-input-help"
        >
          repeatPassword
        </p>
        <div
          className="login-modal-input-box-container login-modal-input-wrong"
        >
          <input
            className="login-modal-input-text"
            data-testid="userPasswordRepeat"
            onChange={[Function]}
            type="password"
          />
        </div>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at user welcome stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-ellipses-container"
      >
        <div
          className="login-ellipse-left-container"
        >
          <div
            className="login-ellipse login-ellipse-green"
          />
        </div>
        <div
          className="login-ellipse-right-container"
        >
          <div
            className="login-ellipse login-ellipse-blue"
          />
        </div>
      </div>
      <div
        className="login-modal-input-container"
      >
        <img
          alt="login-modal-logo"
          className="login-modal-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          brand map
        </p>
        <p
          className="login-modal-header-description"
        >
          loginCallToAction
        </p>
      </div>
      <div
        className="login-modal-button-container"
      >
        <input
          className="login-modal-button-black-on-green"
          type="button"
          value="accountLogin"
        />
        <input
          className="login-modal-button-green-on-black"
          onClick={[Function]}
          type="button"
          value="accountRegister"
        />
      </div>
    </div>
  </div>
</div>
`;
